--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/runtime": "^7.26.0",
     "chart.js": "^4.4.6",
     "d3": "^7.9.0",
+    "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
