fixed problem icon and publishing to git hub pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://INFO442-24AU-C.github.io/",
+  "homepage": "https://INFO442-24AU-C.github.io/Group-3",
   "scripts": {
     "build": "react-scripts build",
     "start": "react-scripts start",
